--- a/css/bootstrap/bootstrap-grid.css
+++ b/css/bootstrap/bootstrap-grid.css
@@ -24,9 +24,13 @@ html {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto; }
-  @media (min-width: 576px) {
-    .container {
-      max-width: 540px; } }
+  (min-width: 768px) {
+    .one-third.img {
+        background-size: contain !important;
+        background-position: center top !important;
+        background-repeat: no-repeat !important;
+    }
+}
   @media (min-width: 768px) {
     .container {
       max-width: 720px; } }
