--- a/css/bootstrap/bootstrap-grid.css
+++ b/css/bootstrap/bootstrap-grid.css
@@ -24,7 +24,7 @@ html {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto; }
-  (min-width: 768px) {
+ @media (min-width: 768px) {
     .one-third.img {
         background-size: contain !important;
         background-position: center top !important;
